--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-google-maps/api": "^2.20.3",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.6",
@@ -35,6 +36,7 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-date-picker": "^5.0.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
